# python-maltiverse

./: .gitignore  LICENSE  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.py
maltiverse/: __init__.py  maltiverse.py  test_maltiverse.py
